--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -1,11 +1,11 @@
 ﻿:root {
    --white: #ffffff;
    --black: #000000;
-   --gray1: #0f1011;
-   --gray2: #212628;
-   --gray3: #31373c;
-   --gray4: #55595f;
-   --gray5: #6c7178;
+   --gray1: #101215;
+   --gray2: #21232a;
+   --gray3: #333742;
+   --gray4: #3e4251;
+   --gray5: #5d6275;
    --textMain: white;
    --textSub1: #b5beca;
    --textSub2: #8f969f;
