--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -28,17 +28,20 @@
       var peopleList = new Dictionary<Person, string>();
 
       foreach (var item in Model) {
-         string departments = string.Join(", ", item.TrainerDepartments.Select(dept => dept.Name));
-         var newPerson = new Person {
-               Id = item.Id,
-               EmployeeID = item.EmployeeID,
-               JobTitle = item.JobTitle,
-               Shift = item.Shift == 1 ? "1st Shift" : "2nd Shift",
-               Name = item.FirstName + " " + item.LastName,
-               Department = departments
-         };
-         var employeeJson = JsonSerializer.Serialize(newPerson, jsonOptions);
-         peopleList.Add(newPerson, employeeJson);
+         if (item.Active == true)
+         {
+            string departments = string.Join(", ", item.TrainerDepartments.Select(dept => dept.Name));
+            var newPerson = new Person {
+                  Id = item.Id,
+                  EmployeeID = item.EmployeeID,
+                  JobTitle = item.JobTitle,
+                  Shift = item.Shift == 1 ? "1st Shift" : "2nd Shift",
+                  Name = item.FirstName + " " + item.LastName,
+                  Department = departments
+               };
+            var employeeJson = JsonSerializer.Serialize(newPerson, jsonOptions);
+            peopleList.Add(newPerson, employeeJson);
+         }
       }
    }
    
