--- a/WCSTrainer/wwwroot/css/colors.css
+++ b/WCSTrainer/wwwroot/css/colors.css
@@ -14,8 +14,8 @@
    --red1: #ff3d3d;
    --red2: #d50000;
    --red3: #311313;
-   --blue1: #25a2ff;
-   --blue2: #007ac1;
+   --blue1: #5ab9ff;
+   --blue2: #01649d;
    --green1: #56ff64;
    --green2: #0a8e19;
    --yellow1: #ffec0a;
@@ -26,7 +26,7 @@
    --purple4: #7b69bd;
    --pill1: #7859fb;
    --pill2: #3d2d81;
-   --pill3: #886cff;
+   --pill3: #b2a0ff;
    --archived: #787f87;
    --svg: invert(75%);
    --svgHover: invert(100%);
