--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -326,6 +326,11 @@ nav {
             width: 100%;
          }
 
+            .panel .body .properties .user-form .title-container {
+               display: flex;
+               gap: 15px;
+            }
+
             .panel .body .properties .user-form .description {
                color: var(--textMain);
             }
@@ -629,6 +634,7 @@ nav {
          font-size: 16px;
          gap: 1px;
          flex-direction: column;
+         padding-right: 10px;
       }
 
          .field-section table tbody tr .text .description-container {
@@ -1893,7 +1899,7 @@ nav {
    flex-direction: column;
    overflow-y: scroll;
    max-height: 75vh;
-   scrollbar-width: none;
+   scrollbar-width: thin;
    scroll-behavior: smooth;
 }
 
@@ -1904,7 +1910,7 @@ nav {
       flex-direction: column;
       border-top: 1px solid var(--gray5);
       background: linear-gradient(to bottom, var(--gray2), var(--gray1));
-      border-radius: 15px;
+      border-radius: 15px 0 0 0;
    }
 
       .category-container .category .category-title {
@@ -2039,12 +2045,14 @@ nav {
    display: flex;
    height: 100%;
    justify-content: space-between;
+   min-width: 0;
 }
    .lesson-pill .left {
       display: flex;
       flex-direction: column;
       padding: 5px;
       padding-left: 10px;
+      min-width: 0;
    }
    .lesson-pill .lesson-title {
       font-weight: bold;
@@ -2125,3 +2133,18 @@ nav {
          background: linear-gradient(45deg, var(--purple3), var(--purple2)) !important;
          text-decoration: underline;
       }
+
+.overdue {
+   display: flex;
+   align-items: center;
+   padding-right: 10px;
+   font-weight: bold;
+   gap: 10px;
+   font-size: 20px;
+   filter: invert(50%) grayscale(100%) brightness(100%) sepia(100%) hue-rotate(-50deg) saturate(500%);
+}
+
+   .overdue img {
+      width: 25px;
+      height: 25px;
+   }
