--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -13,25 +13,25 @@
    }
 }
 
-<div class="people-container">
-   <div class="search">
-      <input class="search-box" type="search" id="searchInputPeople" placeholder="Search by Name or Department" oninput="searchEmployees()" />
-   </div>
-   @{
-      var jsonOptions = new JsonSerializerOptions {
+<div id="people-component" class="people-component hidden">
+   <div class="people-container">
+      <div class="search">
+         <input class="search-box" type="search" id="searchInputPeople" placeholder="Search by Name or Department" oninput="searchEmployees()" />
+      </div>
+      @{
+         var jsonOptions = new JsonSerializerOptions {
             ReferenceHandler = ReferenceHandler.Preserve,
             WriteIndented = false
-      };
-   }
+         };
+      }
 
-   @{
-      var peopleList = new Dictionary<Person, string>();
+      @{
+         var peopleList = new Dictionary<Person, string>();
 
-      foreach (var item in Model) {
-         if (item.Active == true)
-         {
-            string departments = string.Join(", ", item.TrainerDepartments.Select(dept => dept.Name));
-            var newPerson = new Person {
+         foreach (var item in Model) {
+            if (item.Active == true) {
+               string departments = string.Join(", ", item.TrainerDepartments.Select(dept => dept.Name));
+               var newPerson = new Person {
                   Id = item.Id,
                   EmployeeID = item.EmployeeID,
                   JobTitle = item.JobTitle,
@@ -39,60 +39,62 @@
                   Name = item.FirstName + " " + item.LastName,
                   Department = departments
                };
-            var employeeJson = JsonSerializer.Serialize(newPerson, jsonOptions);
-            peopleList.Add(newPerson, employeeJson);
+               var employeeJson = JsonSerializer.Serialize(newPerson, jsonOptions);
+               peopleList.Add(newPerson, employeeJson);
+            }
          }
       }
-   }
-   
-   <ul id="traineesList" class="item-container">
-      @foreach (var item in peopleList) {
-         <li onclick="selectTrainee('@item.Value', this)" class="item" data-name="@item.Key.Name @item.Key.Department">
-            <div class="info">
-               <p>@item.Key.Name</p>
-            </div>
-            <div class="selector">
-               <img src="~/images/add.svg" onclick="addItemToPartial('@item.Key.Id', '@item.Key.Name')" />
-            </div>
-         </li>
-      }
-   </ul>
-</div>
 
-<div class="details">
-   <div class="top">
-      <div id="info-container" class="info-container">
-         <p id="name" class="title"></p>
-         <div class="info">
-            <p class="one">Employee ID:</p>
-            <p id="employeeId" class="two"></p>
+      <ul id="traineesList" class="item-container">
+         @foreach (var item in peopleList) {
+            <li onclick="selectTrainee('@item.Value', this)" class="item" data-name="@item.Key.Name @item.Key.Department">
+               <div class="info">
+                  <p>@item.Key.Name</p>
+               </div>
+               <div class="selector">
+                  <img src="~/images/add.svg" onclick="addItemToPartial('@item.Key.Id', '@item.Key.Name')" />
+               </div>
+            </li>
+         }
+      </ul>
+   </div>
+
+   <div class="details">
+      <div class="top">
+         <div id="info-container" class="info-container">
+            <p id="name" class="title"></p>
+            <div class="info">
+               <p class="one">Employee ID:</p>
+               <p id="employeeId" class="two"></p>
+            </div>
+            <div class="info">
+               <p class="one">Job Title:</p>
+               <p id="jobtitle" class="two"></p>
+            </div>
+            <div class="info">
+               <p class="one">Shift:</p>
+               <p id="shift" class="two"></p>
+            </div>
+            <div class="info">
+               <p class="one">Known Skills:</p>
+               <p id="department" class="two"></p>
+            </div>
+            <div class="btn-container">
+               <a class="btn btnWhite bg-btn" onclick="linkToUser()">View User Details</a>
+            </div>
          </div>
-         <div class="info">
-            <p class="one">Job Title:</p>
-            <p id="jobtitle" class="two"></p>
-         </div>
-         <div class="info">
-            <p class="one">Shift:</p>
-            <p id="shift" class="two"></p>
-         </div>
-         <div class="info">
-            <p class="one">Known Skills:</p>
-            <p id="department" class="two"></p>
+      </div>
+      <div class="bottom">
+         <div class="list-container">
+            <ul id="peopleTempList" class="list"></ul>
          </div>
          <div class="btn-container">
-            <a class="btn btnWhite bg-btn" onclick="linkToUser()">View User Details</a>
+            <button class="btn btnWhite bg-btn" onclick="confirmPeopleSelection()">Add Selection</button>
          </div>
       </div>
    </div>
-   <div class="bottom">
-      <div class="list-container">
-         <ul id="peopleTempList" class="list"></ul>
-      </div>
-      <div class="btn-container">
-         <button class="btn btnWhite bg-btn" onclick="confirmPeopleSelection()">Add Selection</button>
-      </div>
-   </div>
 </div>
+<div class="overlay hidden" onclick="closeComponent()"></div>
 
 <script src="~/js/component.js"></script>
 
