--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -18,7 +18,6 @@
                   <input asp-for="TrainingOrder.CreateDate" hidden />
                   <input asp-for="TrainingOrder.ApprovalDate" hidden />
                   <input asp-for="TrainingOrder.ScheduleDate" hidden />
-                  <input asp-for="TrainingOrder.Status" hidden />
                   <input asp-for="TrainingOrder.ParentSkillId" hidden />
                   <input asp-for="TrainingOrder.CreatedByUserId" hidden />
                   <input asp-for="TrainingOrder.ClosingSignature" hidden />
@@ -31,6 +30,21 @@
                   }
 
                   @if (OrderStatus != "Approving") {
+                     <div class="form-group">
+                        <div class="form">
+                           <div class="labels">
+                              <p class="control-label">Status</p>
+                              <span asp-validation-for="TrainingOrder.Status" class="text-danger"></span>
+                           </div>
+                           <select asp-for="TrainingOrder.Status" class="form-drop2">
+                              <option value="Approving">Approving</option>
+                              <option value="Scheduling">Scheduling</option>
+                              <option value="Active">Active</option>
+                              <option value="Completed">Completed</option>
+                              <option value="Verified">Verified</option>
+                           </select>
+                        </div>
+                     </div>
                      <div class="form-group">
                         <div class="form">
                            <div class="labels">
@@ -65,6 +79,8 @@
                      </div>
                      <input id="trainerInput" asp-for="@Model.SelectedTrainerString" hidden />
                      <input id="groupInput" asp-for="@Model.SelectedTrainerGroupString" hidden />
+                  } else {
+                     <input asp-for="TrainingOrder.Status" hidden />
                   }
 
                   <div class="form-group">
