--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -63,8 +63,10 @@
                            <span asp-validation-for="Employee.Shift" class="text-danger"></span>
                         </div>
                         <select asp-for="Employee.Shift" class="form-drop2">
-                           <option value="1">1st Shift</option>
-                           <option value="2">2nd Shift</option>
+                           <option value="1st Shift">1st Shift</option>
+                           <option value="2nd Shift">2nd Shift</option>
+                           <option value="3rd Shift">3rd Shift</option>
+                           <option value="Swing Shift">Swing Shift</option>
                         </select>
                      </div>
                   </div>
