--- a/WCSTrainer/Pages/Accounts/Index.cshtml
+++ b/WCSTrainer/Pages/Accounts/Index.cshtml
@@ -31,7 +31,7 @@
                            <td>@user.Employee.EmployeeID</td>
                            <td>@user.Employee.FirstName @user.Employee.LastName</td>
                            <td>@user.Employee.JobTitle</td>
-                           <td>@(user.Employee.Shift == 1 ? "1st" : "2nd")</td>
+                           <td>@user.Employee.Shift</td>
                            <td>
                               @{
                                  var isOwner = await UserManager.IsInRoleAsync(user, "owner");
